[package]
name = "pantomath"
version = "0.1.0"
authors = ["post-rex <post-rex@pm.me>"]
edition = "2018"

[dependencies]
sodiumoxide = "^0.2.6"
snow = { version = "^0.8.0", features = ["libsodium-accelerated"] }
mimalloc = { version = "^0.1.25", default-features = false }
tracing = "^0.1.26"
tracing-subscriber = "^0.2.18"
tracing-futures = "^0.2.5"
serde = { version = "^1.0.126", features = ["derive"] }
toml = "^0.5.8"
bytes = "^1.0.1"
prost = "^0.7.0"
arrayvec = "^0.7.1"

[dependencies.tokio]
version = "^1.6.2"
features = ["rt", "rt-multi-thread", "net", "macros", "fs", "io-util"]

[profile.release]
lto = "fat"
codegen-units = 1


[build-dependencies]
prost-build = "^0.7.0"