[package]
name = "pantomath"
version = "0.1.0"
authors = ["post-rex <post-rex@pm.me>"]
edition = "2018"

[dependencies]
arrayvec = "^0.7.1"
atomic = "^0.5.0"
bytes = "^1.0.1"
err-derive = "^0.3.0"
flume = "^0.10.7"
futures = "^0.3.15"
mimalloc = { version = "^0.1.25", default-features = false }
rand_chacha = "^0.3.1"
serde = { version = "^1.0.126", features = ["derive"] }
snow = { version = "^0.8.0", features = ["libsodium-accelerated"] }
sodiumoxide = "^0.2.6"
toml = "^0.5.8"
tracing = "^0.1.26"
tracing-futures = "^0.2.5"
tracing-subscriber = "^0.2.18"
prost = "^0.7.0"
static_assertions = "^1.1.0"

[dependencies.tokio]
version = "^1.18.4"
features = ["rt", "rt-multi-thread", "net", "macros", "fs", "io-util", "sync"]

[profile.release]
lto = "fat"
codegen-units = 1

[build-dependencies]
prost-build = "^0.7.0"